# purple-auth

./: .gitignore  .travis.yml  README.md  devenv.nix  docker-compose.test.yml  docker-compose.yml  pricing.txt  test_env.txt
src/: .coveragerc  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  Pipfile  manage.py  prestart.sh  pyproject.toml
src/app/: config.py  database.py  dependencies.py  main.py  package.json  pnpm-lock.yaml  tailwind.config.js
src/app/io/: email.py  models.py  redis_interface.py
src/app/models/: auth_models.py  client_app_model.py  token_models.py
src/app/portal/: security.py
src/app/portal/crud/: clientapp_crud.py  user_crud.py
src/app/portal/models/: user_model.py
src/app/portal/routes/: api.py  auth.py  views.py
src/app/portal/services/: auth.py  deletion_protection.py  ensure_portal_app.py  htmx.py  templates.py
src/app/portal/templates/: base.html  how-it-works.html  index.html  robots.txt  sitemap.xml  walkthrough.html
src/app/portal/viewmodels/: base_vm.py  confirmcode_vm.py  dashboard_vm.py  howitworks_vm.py  index_vm.py  login_vm.py  seo_vm.py  singleapp_vm.py  techdocs_vm.py
src/app/routes/: client_app.py  magic.py  otp.py  token.py
src/app/scripts/: prestart.py
src/app/security/: client_app.py  context.py  magic.py  otp.py  token.py
src/app/static/: main.css
src/app/static-src/: main.css  package-lock.json  package.json  tailwind.config.js
src/app/tests/: conftest.py
src/app/tests/io/: test_io_email.py
src/app/tests/routes/: test_route_client_app.py  test_route_magic.py  test_route_otp.py  (+1 more)
(+35 files in other folders)
