[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["full"], version = "^0.70.1"}
pydantic = {extras = ["email"], version = "^1.8.2"}
redis = "^4.0.2"
python-multipart = "^0.0.5"
ujson = "^5.1.0"
passlib = "^1.7.4"
python-jwt = "^3.3.1"
jwcrypto = "^1.0"
aiohttp = "^3.8.1"
click = "^8.0.3"
uvicorn = "^0.16.0"
cryptography = "^36.0.1"
argon2-cffi = "^21.3.0"
aiofiles = "^0.8.0"
Jinja2 = "^3.0.3"
mongox = "^0.0.3"
brotli-asgi = "^1.1.0"
purple-auth-client = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Faker = "^10.0.0"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
aioresponses = "^0.7.2"
pytest-asyncio = "^0.16.0"
pytest-freezegun = "^0.4.2"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
